Documentation/1.0.x/README.md

# Atoms API Documentation (1.0.x)
* [Atoms Data Model Classes](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md)
	* [Introduction](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#introduction)
	* [Setting up the data model class for an IAtomicRepository](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#setting-up-the-data-model-class-for-an-iatomicrepository)
	* [Multiple properties used as unique identifier](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#multiple-properties-used-as-unique-identifier)
	* [Resolving differing names between database entity and data class](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#resolving-differing-names-between-database-entity-and-data-class)
	* [Ignoring certain data class public properties](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#ignoring-certain-data-class-public-properties)
	* [Using public properties with complex object types](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#using-public-properties-with-complex-object-types)
	* [Using Enum properties](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#using-enum-properties)
	* [String to Enum mapping rules](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#string-to-enum-mapping-rules)
	* [Using nullable properties](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#using-nullable-properties)
	* [String property max length constraints](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#string-property-max-length-constraints)
	* [Conclusion](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsDataModelClasses.md#conclusion)
* [Atoms Repositories for CRUD](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md)
	* [Introduction](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#introduction)
	* [Creating a repository instance](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#creating-a-repository-instance)
	* [Creating a single data model](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#creating-a-single-data-model)
	* [Creating multiple data models in a batch](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#creating-multiple-data-models-in-a-batch)
	* [Retrieving a single data model](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#retrieving-a-single-data-model)
	* [Deleting a single data model](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#deleting-a-single-data-model)
	* [Deleting multiple data models in a batch](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#deleting-multiple-data-models-in-a-batch)
	* [`CreateOneAsync` and `CreateManyAsync` Exceptions](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#createoneasync-and-createmanyasync-exceptions)
	* [`GetOneAsync` Exceptions](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#getoneasync-exceptions)
	* [`DeleteOneAsync` and `DeleteManyAsync` Exceptions](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#deleteoneasync-and-deletemanyasync-exceptions)
	* [Conclusion](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsRepositoriesForCRUD.md#conclusion)
* [Atoms Query Templates](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md)
	* [Introduction](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#introduction)
	* [Creating a scalar query template using `SqlServerRawTemplateBuilder`](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#creating-a-scalar-query-template-using-sqlserverrawtemplatebuilder)
	* [Creating a tuple query template using `SqlServerRawTemplateBuilder`](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#creating-a-tuple-query-template-using-sqlserverrawtemplatebuilder)
	* [Creating a data model query template using `SqlServerRawTemplateBuilder`](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#creating-a-data-model-query-template-using-sqlserverrawtemplatebuilder)
	* [Defining a custom exception handler using `SqlServerRawTemplateBuilder`](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#defining-a-custom-exception-handler-using-sqlserverrawtemplatebuilder)
	* [Defining a custom `CancellationToken` using `SqlServerRawTemplateBuilder`](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#defining-a-custom-cancellationtoken-using-sqlserverrawtemplatebuilder)
	* [Lazy loading results using `QueryLazy`](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#lazy-loading-results-using-querylazy)
	* [Loading all results into memory using `QueryAsync`](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#loading-all-results-into-memory-using-queryasync)
	* [Passing parameters using anonymous objects](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#passing-parameters-using-anonymous-objects)
	* [Conclusion](https://github.com/caleb-bender/atoms/blob/main/Documentation/1.0.x/AtomsQueryTemplates.md#conclusion)